[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/themes/DashboardTheme.tres" type="Theme" id=1]
[ext_resource path="res://systems/wiki_dashboard/WikiDashboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://systems/RibbonMenu.gd" type="Script" id=3]
[ext_resource path="res://systems/ribbon_menu.tres" type="ButtonGroup" id=4]
[ext_resource path="res://assets/graphics/dashboard/icons/home.svg" type="Texture" id=5]
[ext_resource path="res://assets/graphics/dashboard/icons/map.svg" type="Texture" id=6]
[ext_resource path="res://assets/graphics/dashboard/icons/settings.svg" type="Texture" id=7]
[ext_resource path="res://assets/graphics/dashboard/icons/folder.svg" type="Texture" id=8]
[ext_resource path="res://assets/graphics/dashboard/side bar.png" type="Texture" id=9]
[ext_resource path="res://systems/dashboard UI elements/TabButton.tscn" type="PackedScene" id=10]

[sub_resource type="GDScript" id=5]
script/source = "extends Control

onready var editor_layer:CanvasLayer = $EditorLayer
onready var contianer:HBoxContainer  = $HBoxContainer
"

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.203922, 0.203922, 0.203922, 1 )

[sub_resource type="GDScript" id=3]
script/source = "extends Button

func _physics_process(delta:float)->void:
	if self.pressed:
		self.modulate = Color('c8ffffff')
	elif !self.pressed:
		self.modulate = Color('7dffffff')
"

[sub_resource type="GDScript" id=4]
script/source = "extends Button

func _physics_process(delta:float)->void:
	if self.pressed:
		self.modulate = Color('c8ffffff')
	elif !self.pressed:
		self.modulate = Color('7dffffff')
"

[sub_resource type="GDScript" id=6]
script/source = "extends Button

func _on_ProjectMenuButton_pressed():
	get_tree().change_scene_to(load(\"res://systems/main_menu/MainMenu.tscn\"))
"

[sub_resource type="GDScript" id=7]
script/source = "extends Button



func _on_SettingButton_pressed():
	get_owner().add_child(load(\"res://systems/setting_menu/Settings.tscn\").instance())
"

[node name="Dashboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = SubResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 49.0, 70.0, 22.0 ],
"_edit_vertical_guides_": [ 50.0 ]
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="EditorLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 0

[node name="RibbonMenu" type="Control" parent="HBoxContainer"]
margin_right = 50.0
margin_bottom = 1080.0
rect_min_size = Vector2( 50, 0 )
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="HBoxContainer/RibbonMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/RibbonMenu/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 55.0
texture = ExtResource( 9 )
stretch_mode = 5

[node name="MenuList" type="VBoxContainer" parent="HBoxContainer/RibbonMenu"]
anchor_top = 0.0212963
anchor_right = 1.0
anchor_bottom = 0.972222
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HomeTab" parent="HBoxContainer/RibbonMenu/MenuList" instance=ExtResource( 10 )]

[node name="HomeButton" type="Button" parent="HBoxContainer/RibbonMenu/MenuList/HomeTab/CenterContainer" index="0"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 12.0
margin_top = 12.0
margin_right = 37.0
margin_bottom = 37.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "main dashboard"
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
custom_constants/hseparation = 0
toggle_mode = true
pressed = true
group = ExtResource( 4 )
icon = ExtResource( 5 )
expand_icon = true
script = SubResource( 3 )

[node name="MapTab" parent="HBoxContainer/RibbonMenu/MenuList" instance=ExtResource( 10 )]
margin_top = 60.0
margin_bottom = 110.0

[node name="ColorRect" parent="HBoxContainer/RibbonMenu/MenuList/MapTab" index="0"]
visible = false

[node name="MapTabButton" type="Button" parent="HBoxContainer/RibbonMenu/MenuList/MapTab/CenterContainer" index="0"]
modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 12.0
margin_top = 12.0
margin_right = 37.0
margin_bottom = 37.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "map dashboard"
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
toggle_mode = true
group = ExtResource( 4 )
icon = ExtResource( 6 )
expand_icon = true
script = SubResource( 4 )

[node name="StatsTabButton" type="Button" parent="HBoxContainer/RibbonMenu/MenuList"]
visible = false
margin_left = 12.0
margin_top = 120.0
margin_right = 37.0
margin_bottom = 145.0
rect_min_size = Vector2( 25, 25 )
focus_mode = 0
size_flags_horizontal = 6
toggle_mode = true
group = ExtResource( 4 )
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/RibbonMenu/MenuList"]
margin_top = 120.0
margin_right = 50.0
margin_bottom = 946.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/RibbonMenu/MenuList"]
margin_top = 956.0
margin_right = 50.0
margin_bottom = 1026.0
custom_constants/separation = 20

[node name="ProjectMenuButton" type="Button" parent="HBoxContainer/RibbonMenu/MenuList/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 12.0
margin_right = 37.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
icon = ExtResource( 8 )
expand_icon = true
script = SubResource( 6 )

[node name="SettingButton" type="Button" parent="HBoxContainer/RibbonMenu/MenuList/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.490196 )
margin_left = 12.0
margin_top = 45.0
margin_right = 37.0
margin_bottom = 70.0
rect_min_size = Vector2( 25, 25 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
icon = ExtResource( 7 )
expand_icon = true
script = SubResource( 7 )

[node name="WikiDashboard" parent="HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[connection signal="pressed" from="HBoxContainer/RibbonMenu/MenuList/HomeTab/CenterContainer/HomeButton" to="HBoxContainer/RibbonMenu" method="_on_HomeButton_pressed"]
[connection signal="pressed" from="HBoxContainer/RibbonMenu/MenuList/MapTab/CenterContainer/MapTabButton" to="HBoxContainer/RibbonMenu" method="_on_MapTabButton_pressed"]
[connection signal="pressed" from="HBoxContainer/RibbonMenu/MenuList/StatsTabButton" to="HBoxContainer/RibbonMenu" method="_on_StatsTabButton_pressed"]
[connection signal="pressed" from="HBoxContainer/RibbonMenu/MenuList/VBoxContainer/ProjectMenuButton" to="HBoxContainer/RibbonMenu/MenuList/VBoxContainer/ProjectMenuButton" method="_on_ProjectMenuButton_pressed"]
[connection signal="pressed" from="HBoxContainer/RibbonMenu/MenuList/VBoxContainer/SettingButton" to="HBoxContainer/RibbonMenu/MenuList/VBoxContainer/SettingButton" method="_on_SettingButton_pressed"]

[editable path="HBoxContainer/RibbonMenu/MenuList/HomeTab"]
[editable path="HBoxContainer/RibbonMenu/MenuList/MapTab"]
